add recovery test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.1)
 project(SomeKV-AEP)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++17 -gdwarf-5")
 
 add_library(intserface STATIC IMPORTED)
 set_target_properties(intserface PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/build/libinterface.so)
