--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,7 @@ include_directories(
 )
 
 add_subdirectory(src)
-add_subdirectory(test)
+
+if(MAKE_TEST STREQUAL "ON")
+    add_subdirectory(test)
+endif()
