--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,6 @@ find_library(libpmem pmem)
 
 target_link_libraries (interface glog::glog)
 target_link_libraries (interface absl::flat_hash_set)
-target_link_libraries (interface ${libpmem})
+target_link_libraries (interface ${libpmem} -lpmem)
 
 set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build)
