--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,3 +10,9 @@ target_link_libraries (interface glog::glog)
 target_link_libraries (interface absl::flat_hash_set)
 target_link_libraries (interface ${libpmem} -lpmem)
 set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build)
+
+
+#add_executable(test main.cpp)
+#target_link_libraries (test glog::glog)
+#target_link_libraries (test interface)
+
