--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.1)
 project("SomeKV-AEP")
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(BUILD_STATIC ${MAKE_TEST})
 
 include_directories(
     ${CMAKE_SOURCE_DIR}/src
