--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,13 +6,12 @@ message("BUILD_STATIC=${BUILD_STATIC}")
 
 if(BUILD_STATIC STREQUAL "ON")
     add_library(interface STATIC interface.cpp)
-elseif()
+else()
     add_library(interface SHARED interface.cpp)
     target_link_libraries(interface glog::glog)
     target_link_libraries(interface absl::flat_hash_set)
     target_link_libraries(interface ${libpmem} -lpmem)
+    find_library(libpmem pmem)
 endif()
-
-find_library(libpmem pmem)
 
 set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build)
